Add new endpoint to get matches by marketId
