# api/internal/matches/router.go
@@ -1,0 +1,7 @@
+package matches
+
+import "github.com/gofiber/fiber/v3"
+
+func RegisterMatchRoutes(app fiber.Router, handler *MatchHandler) {
+	app.Get("/markets/:market/matches", handler.GetMatches)
+}
